style.css
body {
    margin: 0;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    background-color: #000000;
    color: #ffffff;
    line-height: 1.6;
}
header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1em 2vw;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    background-color: #000000;
    border-bottom: 1px solid #555555;
    z-index: 1000;
    letter-spacing: 0.05em;
}
.logo {
    display: flex;
    align-items: center;
}
main {
    margin-top: 90px;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
    padding: 0 2vw;
}
.logo img {
    width: 60px;
    height: auto;
}
nav a {
    margin-left: 1.5em;
    font-weight: 400;
    font-size: 0.95em;
    text-transform: uppercase;
    color: #ffffff;
}
nav a:first-child {
    margin-left: 0;
}
h1 {
    font-weight: 400;
    font-size: 1.6em;
    margin-bottom: 0.75em;
}
h2 {
    font-weight: 400;
    font-size: 1.4em;
    margin-bottom: 0.75em;
}
p {
    font-weight: 300;
    font-size: 1em;
    margin-bottom: 1em;
    line-height: 1.6em;
}
.large-margin {
    margin-bottom: 2.5em;
}
.mid-margin {
    margin-bottom: 1.5em;
}
.italic {
    font-style: italic;
}
.link {
    color: #ffffff;
    text-decoration: none;
}
.link:hover {
    text-decoration: underline;
}
img {
    margin-top: 10px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
section {
    margin-bottom: 3em;
}
.works-list {
    list-style-type: none;
    padding: 0;
}
.works-list li {
    margin-bottom: 1.5em;
    padding-left: 1em;
    border-left: 3px solid #555555;
}
.works-title {
    display: block;
    font-weight: 400;
}
.works-details {
    display: block;
    font-style: italic;
    color: #cccccc;
    margin-top: 0.2em;
}

.hero h1 {
    font-size: 2em;
}

.news-container {
    position: fixed;
    top: 80px;
    left: 0;
    width: 200px;
    max-height: calc(100vh - 80px);
    overflow-y: auto;
    padding: 1em;
    border-right: 1px solid #555555;
    background-color: #000000;
}

.news-container h2 {
    font-size: 1.1em;
    margin-top: 0;
}

.news-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.news-list li {
    margin-bottom: 1em;
}

.news-list a {
    color: #ffffff;
    text-decoration: none;
}

.news-list a:hover {
    text-decoration: underline;
}

body.home main {
    margin-left: 220px;
}

@media (max-width: 800px) {
    .news-container {
        position: static;
        width: auto;
        max-height: none;
        border-right: none;
        margin-bottom: 2em;
    }
    body.home main {
        margin-left: 0;
    }
}

@media (max-width: 600px) {
    header {
        flex-direction: column;
        align-items: flex-start;
    }
    nav {
        margin-top: 0.5em;
    }
    nav a {
        margin: 0 1em 0.5em 0;
    }
}

